feat : 메인페이지 공지사항 보여지게 기능 수정

--- a/src/main/resources/templates/notice/notice.html
+++ b/src/main/resources/templates/notice/notice.html
@@ -10,8 +10,8 @@
                 <i class="fa-solid fa-bullhorn" style="color: #91c0fd;"></i>
                 <h2 class="card-title"> 공지사항</h2>
             </div>
-            <div class="overflow-x-auto mt-4">
-                <div class="table-container">
+            <div class="mt-4">
+                <div class="table-container overflow-x-auto">
                     <table class="table table-sm">
                         <!-- head -->
                         <thead>
@@ -70,7 +70,6 @@
                     <div class="btn btn-primary" onclick="javascript: window.location.href='/';">
                         홈으로
                     </div>
-                    <div class="btn btn-primary" onclick="javascript: window.location.href='/gym';"> 헬스장메인으로</div>
                 </div>
             </div>
 
