--- a/src/main/resources/templates/home/main.html
+++ b/src/main/resources/templates/home/main.html
@@ -29,7 +29,7 @@
                 <i class="fa-solid fa-bullhorn text-[1rem]" style="color: #91c0fd;"></i>
                 <h2>공지사항</h2>
             </div>
-            <a class="link link-hover" href="/article/group/list">더보기 ></a>
+            <a class="link link-hover" href="/notice">더보기 ></a>
         </div>
         <div class="overflow-x-auto mt-4">
             <div class="table-container">
