--- a/src/main/resources/templates/maintenance/add.html
+++ b/src/main/resources/templates/maintenance/add.html
@@ -22,7 +22,7 @@
             <div class="mt-1">
                 <input type="text" th:field="*{vehicleNumber}"
                        class="w-full px-3 py-2 border rounded"
-                       required placeholder="차량번호">
+                       pattern="[0-9]{3}[가-힣]{1}[0-9]{4}" required placeholder="차량번호 ex)123가3456">
             </div>
                 <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 mt-4 ml-16 rounded">
                     등록
