refactor : layout mypage 가는 이모티콘 수정

--- a/src/main/resources/templates/home/layout.html
+++ b/src/main/resources/templates/home/layout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html data-theme="corporate" lang="ko"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.w3.org/1999/xhtml">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
     <meta charset="UTF-8">
@@ -31,19 +31,10 @@
         </a>
     </div>
     <div class="navbar-end">
-        <a class="btn btn-ghost" sec:authorize="isAuthenticated()" href="javascript:"
-           onclick="$(this).next().submit();">로그아웃</a>
-        <form class="!hidden" th:action="|/account/logout|" method="POST"></form>
-        <button class="btn btn-ghost btn-circle">
-            <div class="indicator">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                     stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                          d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"/>
-                </svg>
-                <span class="badge badge-xs badge-primary indicator-item"></span>
-            </div>
-        </button>
+        <a href="/aptAccount/me">
+            <i class="fa-solid fa-user text-[1.5rem]" style="color: #91c0fd;"></i>
+        </a>
+
     </div>
 </div>
 <!-- main -->
