--- a/src/main/resources/templates/maintenance/vehicle.html
+++ b/src/main/resources/templates/maintenance/vehicle.html
@@ -1,6 +1,18 @@
 <html layout:decorate="~{home/layout.html}" xmlns="http://www.w3.org/1999/html">
 <head>
     <title>세대차량 목록</title>
+    <style>
+        .bottom-shadow::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 5px;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
 <body>
 <main layout:fragment="main" class="flex flex-col justify-start items-start flex-grow">
@@ -8,21 +20,27 @@
     <div class="flex justify-center mt-4 mb-3 relative w-full">
         <div class="flex flex-col">
             <div th:each="vehicle : ${form}"
-                 class="border-2 my-4 border-gray-500 border-x-indigo-50/0 w-80 h-50 px-2 my-4">
-                <div class="mt-4">
-                    <i class="fa-solid fa-user mr-1"></i>
+                 class="border-2 my-4 border-gray-500 border-x-indigo-50/0 w-80 h-50 px-2 my-4 bottom-shadow relative">
+                <div class="mt-3 ml-2">
+                    <i class="fa-solid fa-user"></i>
                     <span class="mr-2">차량주<br></span>
-                    <span class="mt-1" th:text="${vehicle.name}"></span>
+                    <span class="mt-1 text-lg" th:text="${vehicle.name}"></span>
                 </div>
-                <div class="mt-4">
-                    <i class="fa-solid fa-car mr-1"></i>
+                <div class="mt-4 ml-2">
+                    <i class="fa-solid fa-car"></i>
                     <span>차량번호<br></span>
-                    <span class="mt-1" th:text="${vehicle.vehicleNumber}"></span>
+                    <span class="mt-1 text-lg" th:text="${vehicle.vehicleNumber}"></span>
                 </div>
-                <div class="flex justify-end">
-                    <a th:href="@{'/maintenance/delete/' + ${vehicle.getId()}}"
-                       onclick="return confirm('게시글을 삭제하시겠습니까?');"
-                       class="text-red-400">삭제</a>
+                <div class="flex justify-between items-center mt-4 mb-1">
+                    <div>
+                        <a th:text="${#temporals.format(vehicle.date, 'yyyy.MM.dd 등록')}"
+                           class="text-sm text-gray-400"></a>
+                    </div>
+                    <div>
+                        <a th:href="@{'/maintenance/delete/' + ${vehicle.getId()}}"
+                           onclick="return confirm('차량을 삭제 하시겠습니까?');"
+                           class="text-red-400">삭제</a>
+                    </div>
                 </div>
             </div>
             <div th:if="${#lists.isEmpty(form)}" class="my-4 text-center">
