--- a/src/main/resources/templates/admin/gym/gym.html
+++ b/src/main/resources/templates/admin/gym/gym.html
@@ -56,7 +56,7 @@
                     onclick="javascript: window.location.href='/admin/gym/history';">헬스장 이용 현황
             </button>
             <button class="btn shadow-xl m-2" style="background-color: #91c0fd;"
-                    onclick="javascript: window.location.href='/';">이용권 관리
+                    onclick="javascript: window.location.href='/admin/gym/ticket';">이용권 관리
             </button>
         </th:block>
     </div>
