--- a/src/main/resources/templates/admin/gym/history.html
+++ b/src/main/resources/templates/admin/gym/history.html
@@ -23,7 +23,8 @@
     </div>
     <div class="mt-2 ml-2">
         <div class="table-container" style="overflow-x: auto; -webkit-overflow-scrolling: touch;">
-            <table class="table table-sm"><!-- head -->
+            <table class="table table-sm">
+                <!-- head -->
                 <thead>
                 <tr class="text-center">
                     <th>순번</th>
@@ -57,7 +58,7 @@
                     <td th:if="${gymHistory.paymentDate !=null}" th:text="${gymHistory.paymentDate}"></td>
                     <td th:if="${gymHistory.paymentDate ==null}">-</td>
                     <td th:if="${gymHistory.price!=null}"
-                        th:text="${#numbers.formatInteger(gymHistory.price, 3, 'COMMA') + '원'}"></td>
+                        th:text="${#numbers.formatInteger(gymHistory.price, 3, 'COMMA') + '원'}" style="min-width:40px; padding: 12px 0;"></td>
                     <td th:if="${gymHistory.price==null}">-</td>
                     <td th:text="${gymHistory.contact}" style="min-width:120px; padding: 12px 0;"></td>
                     <td th:if="${gymHistory.status==0}" style="min-width:40px; padding: 12px 0;">결제</td>
