--- a/src/main/resources/templates/admin/gym/ticket/ticket.html
+++ b/src/main/resources/templates/admin/gym/ticket/ticket.html
@@ -22,10 +22,11 @@
                     <label class="flex items-center gap-2">
                     <span class="label-text"
                           th:text="|${ticket.name} - ${#numbers.formatInteger(ticket.price, 3, 'COMMA') + '원'}|"
+                          style="min-width:65px;"
                           th:value="${ticket.price}">
                         </span>
                         <div class="font-bold" th:if="${!#strings.isEmpty(ticket.content)}"
-                             th:text="${'(' + ticket.content + ')'}"></div>
+                             th:text="${'(' + ticket.content + ')'}" style="min-width:100px;"></div>
                         <a th:href="@{|/admin/gym/ticket/modify/${ticket.id}|}" class="btn btn-sm btn-primary"
                            th:text="수정"></a>
                         <a onclick="if ( confirm('정말로 삭제하시겠습니까?') ) $(this).next().submit();"
