--- a/src/main/resources/templates/gym/history.html
+++ b/src/main/resources/templates/gym/history.html
@@ -1,21 +1,21 @@
 <html layout:decorate="~{home/layout.html}">
 
 <head>
-    <title>결제 내역</title>
+    <title>이용 내역</title>
 </head>
 
 <body>
 
 <main layout:fragment="main">
-    <div class="flex items-center justify-center h-screen">
+    <div class="text-center flex flex-col h-screen justify-center gap-2">
         <div class="text-center flex flex-col wrap gap-2">
-            <div class="flex gap-2 justify-center items-center">
-                <i class="fa-solid fa-comments-dollar" style="color: #70a5ff;"></i>
-                <p class="font-bold">이용 내역</p>
-            </div>
             <th:block th:if="${paging.totalElements !=0}">
-                <div class="overflow-x-auto mt-4">
-                    <div class="table-container">
+                <div class="flex gap-2 justify-center items-center">
+                    <i class="fa-solid fa-comments-dollar" style="color: #70a5ff;"></i>
+                    <p class="font-bold">이용 내역</p>
+                </div>
+                <div class="mt-2 ml-2">
+                    <div class="table-container" style="overflow-x: auto; -webkit-overflow-scrolling: touch;">
                         <table class="table table-sm">
                             <!-- head -->
                             <thead>
@@ -47,7 +47,8 @@
                                     th:text="${#temporals.format(gymHistory.endDate, 'yy-MM-dd')}"
                                     style="min-width:40px; padding: 12px 0;"></td>
                                 <td th:if="${gymHistory.price !=null}"
-                                    th:text="${#numbers.formatInteger(gymHistory.price, 3, 'COMMA') + '원'}"></td>
+                                    th:text="${#numbers.formatInteger(gymHistory.price, 3, 'COMMA') + '원'}"
+                                    style="min-width:40px; padding: 12px 0;"></td>
                                 <td th:if="${gymHistory.price ==null}">-</td>
                                 <td th:if="${gymHistory.status==0}" style="min-width:40px; padding: 12px 0;">결제</td>
                                 <td th:if="${gymHistory.status==1}" style="min-width:40px; padding: 12px 0;">연장</td>
