--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -83,7 +83,7 @@
                 class="btn btn-outline btn-primary">
             방문차량 조회
         </button>
-        <button id="mypage"
+        <button id="mypage" onclick="javascript: window.location.href='/aptAccount/me';"
                 class="btn btn-outline btn-primary">
             마이페이지
         </button>
