refactor : gym 메서드명, 주ã석 수정

--- a/src/main/resources/templates/gym/register.html
+++ b/src/main/resources/templates/gym/register.html
@@ -180,10 +180,7 @@
                     "orderName": parsedText + "-" + "시작일-" + formattedDate,
                     "successUrl": successUrl,
                     "method": "card",
-                    "failUrl": failUrl,
-                    "customerName": [[${user.account.fullName}]],
-                    "useInternationalCardOnly": false,
-                    "flowMode": "DEFAULT"
+                    "failUrl": failUrl
                 }
             }
                 pay("카드", jsons.card);
