refactor : Gym 관련 엔티티에 회원 정보 저장 속성 추가

--- a/src/main/resources/templates/gym/gym.html
+++ b/src/main/resources/templates/gym/gym.html
@@ -14,7 +14,7 @@
                 <div class="flex items-center gap-2">
                     <i class="fa-solid fa-user" style="color: #91c0fd;"></i>
                     <div class="flex items-center">
-                        <p class="font-bold" th:text="${gymMembership.user.account.fullName}"></p>
+                        <p class="font-bold" th:text="${gymMembership.userName}"></p>
                         <p>님</p>
                     </div>
                 </div>
