--- a/src/main/resources/templates/gym/pause.html
+++ b/src/main/resources/templates/gym/pause.html
@@ -17,7 +17,7 @@
                 <div class="flex items-center gap-2 mt-8">
                     <i class="fa-solid fa-user" style="color: #91c0fd;"></i>
                     <div class="flex items-center">
-                        <p class="font-bold" th:text="${user.account.fullName}"></p>
+                        <p class="font-bold" th:text="${membership.userName}"></p>
                         <p>님</p>
                     </div>
                 </div>
