--- a/src/main/resources/templates/admin/gym/history.html
+++ b/src/main/resources/templates/admin/gym/history.html
@@ -43,7 +43,7 @@
                     <td th:text="${(paging.number * paging.size) + loop.index +1}"
                         style="min-width:40px; padding: 12px 0;"></td>
                     <td th:text="${gymHistory.address}" style="min-width:60px; padding: 12px 0;"></td>
-                    <td th:text="${gymHistory.user.account.fullName}" style="min-width:40px; padding: 12px 0;"></td>
+                    <td th:text="${gymHistory.userName}" style="min-width:40px; padding: 12px 0;"></td>
                     <td th:if="${gymHistory.restartDate ==null}"
                         th:text="${#temporals.format(gymHistory.startDate, 'yy-MM-dd')}"
                         style="min-width:80px; padding: 12px 0;"></td>
