--- a/src/main/resources/templates/admin/gym/members.html
+++ b/src/main/resources/templates/admin/gym/members.html
@@ -47,7 +47,7 @@
                     <td th:text="${(paging.number * paging.size) + loop.index +1}"
                         style="min-width:40px; padding: 12px 0;"></td>
                     <td th:text="${gymMember.address}" style="min-width:60px; padding: 12px 0;"></td>
-                    <td th:text="${gymMember.user.account.fullName}"
+                    <td th:text="${gymMember.userName}"
                         style="min-width:40px; padding: 12px 0;"></td>
                     <td th:text="${#temporals.format(gymMember.startDate, 'yy-MM-dd')}"
                         style="min-width:80px; padding: 12px 0;"></td>
