--- a/src/main/resources/templates/home/layout.html
+++ b/src/main/resources/templates/home/layout.html
@@ -21,7 +21,7 @@
 <body>
 <div class="navbar bg-base-100 sticky top-0">
     <div class="navbar-start">
-        <div class="btn btn-ghost btn-circle" onclick="javascript: window.history.back();">
+        <div th:if="${@rq.login}" class="btn btn-ghost btn-circle" onclick="javascript: window.history.back();">
             <i class="fa-solid fa-arrow-left"></i>
         </div>
     </div>
@@ -31,8 +31,8 @@
         </a>
     </div>
     <div class="navbar-end">
-        <a href="/aptAccount/me">
-            <i class="fa-solid fa-user text-[1.5rem]" style="color: #91c0fd;"></i>
+        <a th:if="${@rq.login}" href="/aptAccount/me">
+            <i class="fa-solid fa-user text-[1.2rem]" style="color: #91c0fd;"></i>
         </a>
 
     </div>
@@ -62,6 +62,11 @@
             localStorage.removeItem(localStorageKeyAboutHistoryBackErrorMsg);
         }
     });
+
+    if (document.documentElement.hasAttribute("data-hide-back-button")) {
+        const backButton = document.querySelector(".btn-ghost.btn-circle");
+        backButton.style.display = "none";
+    }
 </script>
 </body>
 </html>
