--- a/src/main/resources/templates/home/main.html
+++ b/src/main/resources/templates/home/main.html
@@ -1,4 +1,4 @@
-<html layout:decorate="~{home/layout.html}">
+<html data-hide-back-button="true" layout:decorate="~{home/layout.html}">
 <head>
     <title layout:title-pattern="$CONTENT_TITLE | $LAYOUT_TITLE"></title>
     <style>
