feat : navbar 마이페이지 아이콘 위치 조절

--- a/src/main/resources/templates/home/layout.html
+++ b/src/main/resources/templates/home/layout.html
@@ -31,7 +31,7 @@
         </a>
     </div>
     <div class="navbar-end">
-        <a th:if="${@rq.login}" href="/aptAccount/me">
+        <a th:if="${@rq.login}" class="mr-5 mt-4" href="/aptAccount/me">
             <i class="fa-solid fa-user text-[1.2rem]" style="color: #91c0fd;"></i>
         </a>
 
