feat : 공지사항 디자인 개선

--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -1,4 +1,4 @@
-<html layout:decorate="~{home/layout.html}">
+<html data-hide-back-button="true" layout:decorate="~{home/layout.html}">
 <head>
     <title>관리자</title>
     <style>
