refactor : 공지사항 테이블 디자인 개선

--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -34,13 +34,17 @@
         <div class="overflow-x-auto">
             <div class="table-container">
                 <table class="table table-sm">
-                    <!-- head -->
                     <tbody>
-                    <tr class="text-center" th:each="notice : ${noticeList}"
+                    <tr th:each="notice : ${noticeList}"
                         th:onclick="'location.href=\'/notice/' + ${notice.id} + '\''">
-                        <td th:text="${notice.title}" style="min-width:50px; padding: 5px 0;"></td>
-                        <td th:text="${#temporals.format(notice.createDate, 'yy-MM-dd')}"
-                            style="min-width:40px; padding: 12px 0;"></td>
+                        <td class="text-center px-5 min-w-[50px]">
+                            <span th:if="${#strings.length(notice.title) <= 16}"
+                                  th:text="${notice.title}"></span>
+                            <span th:unless="${#strings.length(notice.title) <= 16}"
+                                  th:text="${notice.title.substring(0, 16)} + '...'"></span>
+                        </td>
+                        <td class="text-end px-5 min-w-[40px]"
+                            th:text="${#temporals.format(notice.createDate, 'yy-MM-dd')}"></td>
                     </tr>
                     </tbody>
                 </table>
@@ -49,8 +53,7 @@
     </div>
     <!-- 버튼메뉴 -->
     <div class="flex justify-center flex-wrap gap-3">
-        <button id="management"
-                th:onclick="${@rq.isAdmin()} ? 'javascript: window.location.href=\'/admin/management\';' : 'authority_modal.showModal()'"
+        <button id="management" onclick="javascript: window.location.href='/admin/management';"
                 class="btn btn-outline btn-primary">
             회원 관리
         </button>
@@ -87,14 +90,6 @@
                 style="visibility:hidden">
         </button>
     </div>
-    <dialog id="authority_modal" class="modal p-5">
-        <form method="dialog" class="modal-box">
-            <p class="font-semibold">접근 권한이 없습니다.</p>
-            <div class="modal-action">
-                <button class="btn btn-primary btn-sm text-sm">확인</button>
-            </div>
-        </form>
-    </dialog>
 </main>
 </body>
 </html>
