--- a/src/main/resources/templates/home/main.html
+++ b/src/main/resources/templates/home/main.html
@@ -62,8 +62,9 @@
                 onclick="javascript: window.location.href='maintenance/vehicle';">
             차량 등록
         </button>
-        <button id="repair" onclick="information_modal.showModal()"
-                class="btn btn-outline btn-primary">
+        <button id="repair"
+                class="btn btn-outline btn-primary"
+                onclick="toastWarning('죄송합니다,<br>현재 이 서비스는 준비 중입니다.');">
             시설 보수 신청
         </button>
         <button id="guest-house"
@@ -83,15 +84,6 @@
                 style="visibility:hidden">
         </button>
     </div>
-    <dialog id="information_modal" class="modal p-5">
-        <form method="dialog" class="modal-box">
-            <p class="font-semibold">죄송합니다,<br>현재 이 서비스는 준비 중입니다. </p>
-            <div class="modal-action">
-                <!-- if there is a button in form, it will close the modal -->
-                <button class="btn btn-primary btn-sm text-sm">확인</button>
-            </div>
-        </form>
-    </dialog>
 </main>
 </body>
 </html>
