--- a/src/main/resources/templates/admin/gym/history.html
+++ b/src/main/resources/templates/admin/gym/history.html
@@ -43,7 +43,7 @@
                 <tr class="text-center" th:each="gymHistory, loop : ${paging}"><!-- 1번 ~ 증가하는 식으로 순번 표시 -->
                     <td th:text="${(paging.number * paging.size) + loop.index +1}"
                         style="min-width:40px; padding: 12px 0;"></td>
-                    <td th:text="${gymHistory.address}" style="min-width:60px; padding: 12px 0;"></td>
+                    <td th:text="${gymHistory.address}" style="min-width:100px; padding: 12px 0;"></td>
                     <td th:text="${gymHistory.userName}" style="min-width:40px; padding: 12px 0;"></td>
                     <td th:if="${gymHistory.restartDate ==null}"
                         th:text="${#temporals.format(gymHistory.startDate, 'yy-MM-dd')}"
@@ -55,10 +55,10 @@
                         style="min-width:80px; padding: 12px 0;"></td>
                     <td th:if="${gymHistory.remainingDay !=null}" th:text="${gymHistory.remainingDays +'일'}"></td>
                     <td th:if="${gymHistory.remainingDay ==null}">-</td>
-                    <td th:if="${gymHistory.paymentDate !=null}" th:text="${gymHistory.paymentDate}"></td>
+                    <td th:if="${gymHistory.paymentDate !=null}" th:text="${#temporals.format(gymHistory.paymentDate, 'yy-MM-dd')}" style="min-width:80px; padding: 12px 0;"></td>
                     <td th:if="${gymHistory.paymentDate ==null}">-</td>
                     <td th:if="${gymHistory.price!=null}"
-                        th:text="${#numbers.formatInteger(gymHistory.price, 3, 'COMMA') + '원'}" style="min-width:40px; padding: 12px 0;"></td>
+                        th:text="${#numbers.formatInteger(gymHistory.price, 3, 'COMMA') + '원'}" style="min-width:60px; padding: 12px 0;"></td>
                     <td th:if="${gymHistory.price==null}">-</td>
                     <td th:text="${gymHistory.contact}" style="min-width:120px; padding: 12px 0;"></td>
                     <td th:if="${gymHistory.status==0}" style="min-width:40px; padding: 12px 0;">결제</td>
