--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -73,7 +73,7 @@
                 class="btn btn-outline btn-primary">
             시설 보수 신청
         </button>
-        <button id="guest-house"
+        <button id="guest-house" onclick="javascript: window.location.href='/admin/guesthouse';"
                 class="btn btn-outline btn-primary">
             게스트하우스 신청
         </button>
