--- a/src/main/resources/templates/home/main.html
+++ b/src/main/resources/templates/home/main.html
@@ -71,7 +71,7 @@
                 onclick="toastWarning('죄송합니다,<br>현재 이 서비스는 준비 중입니다.');">
             시설 보수 신청
         </button>
-        <button id="guest-house"
+        <button id="guest-house" onclick="javascript: window.location.href='/guest/booking';"
                 class="btn btn-outline btn-primary">
             게스트하우스 신청
         </button>
