--- a/src/main/resources/templates/maintenance/add.html
+++ b/src/main/resources/templates/maintenance/add.html
@@ -18,12 +18,26 @@
             <form th:action method="post" th:object="${form}">
             <input type="text" th:field="*{name}"
                    class="w-full px-3 py-2 border rounded"
-                   required placeholder="성함">
-            <div class="mt-1">
-                <input type="text" th:field="*{vehicleNumber}"
-                       class="w-full px-3 py-2 border rounded"
-                       pattern="[0-9]{3}[가-힣]{1}[0-9]{4}" required placeholder="차량번호 ex)123가3456">
-            </div>
+                   required placeholder= "성함">
+                <div class="text-xs text-gray-500 ml-1">
+                    <strong>차량 소유자 </strong>입력
+                </div>
+                <div class="mt-1">
+                    <input
+                            type="text"
+                            th:field="*{vehicleNumber}"
+                            class="w-full px-3 py-2 border rounded"
+                            pattern="[0-9]{2,3}[가-힣]{1}[0-9]{4}"
+                            required
+                            placeholder="차량번호"
+                            oninvalid="this.setCustomValidity('올바른 차량번호를 입력해주십시오.')"
+                            oninput="this.setCustomValidity('')"
+                    >
+                    <div class="text-xs text-gray-500 ml-1">
+                        <strong>띄어쓰기 없이 7-8자</strong> 입력
+                    </div>
+                </div>
+
                 <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 mt-4 ml-16 rounded">
                     등록
                 </button>
